--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,4 +5,5 @@
     <string name="share">Compartir</string>
     <string name="financiar">FINANCIAR</string>
     <string name="valor">$7.963.420</string>
+    <string name="ingresos">Ingresos</string>
 </resources>
