--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="financiar">FINANCIAR</string>
     <string name="valor">$7.963.420</string>
     <string name="date">mar 15 - 22 2018</string>
+    <string name="ingresos">Ingresos</string>
 </resources>
